# Ember

./: .clinerules  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  quickstart.sh
.github/workflows/: benchmark.yml  ci.yml  release.yml
assets/: logo.txt
crates/ember-benchmarks/: Cargo.toml  README.md
crates/ember-benchmarks/benches/: core_benchmarks.rs  full_suite.rs  storage_benchmarks.rs  tools_benchmarks.rs
crates/ember-benchmarks/src/: lib.rs  utils.rs
crates/ember-browser/: Cargo.toml
crates/ember-browser/src/: browser.rs  error.rs  lib.rs  tool.rs
crates/ember-cli/: Cargo.toml
crates/ember-cli/src/: config.rs  error_display.rs  main.rs
crates/ember-cli/src/commands/: chat.rs  config.rs  mod.rs  plugin.rs  serve.rs
crates/ember-cli/src/tui/: app.rs  mod.rs  ui.rs
crates/ember-core/: Cargo.toml
crates/ember-core/src/: agent.rs  cache.rs  checkpoint.rs  config.rs  context.rs  conversation.rs  cost_predictor.rs  error.rs  knowledge_graph.rs  lib.rs  memory.rs  orchestrator.rs  planning.rs  privacy.rs  sandbox.rs  self_healing.rs  streaming.rs  task_planner.rs  thinking.rs
crates/ember-desktop/: Cargo.toml  README.md  tauri.conf.json
crates/ember-desktop/icons/: .gitkeep
crates/ember-desktop/src/: main.rs
crates/ember-i18n/: Cargo.toml  README.md
crates/ember-i18n/locales/: de.json  en.json  es.json  fr.json  ja.json  zh-CN.json
crates/ember-i18n/src/: lib.rs
crates/ember-llm/: Cargo.toml
crates/ember-llm/benches/: llm_benchmark.rs
crates/ember-llm/src/: anthropic.rs  deepseek.rs  error.rs  gemini.rs  groq.rs  lib.rs  mistral.rs  mock.rs  model_registry.rs  ollama.rs  openai.rs  openrouter.rs  provider.rs  retry.rs  router.rs  types.rs  xai.rs
crates/ember-mcp/: Cargo.toml
crates/ember-mcp/src/: client.rs  error.rs  lib.rs  server.rs  types.rs
crates/ember-plugins/: Cargo.toml
crates/ember-plugins/src/: error.rs  lib.rs  manifest.rs  marketplace.rs  runtime.rs  sdk.rs
crates/ember-storage/: Cargo.toml
crates/ember-storage/src/: embeddings.rs  error.rs  lib.rs  memory.rs  rag.rs  sqlite.rs  vector.rs
crates/ember-telemetry/: Cargo.toml  README.md
crates/ember-telemetry/src/: anonymizer.rs  collector.rs  error.rs  events.rs  lib.rs  storage.rs
crates/ember-tools/: Cargo.toml
crates/ember-tools/src/: code_execution.rs  error.rs  filesystem.rs  git.rs  lib.rs  registry.rs  shell.rs  web.rs
crates/ember-web/: Cargo.toml
crates/ember-web/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
crates/ember-web/frontend/src/: App.tsx  index.css
crates/ember-web/frontend/src/components/: ConversationItem.tsx  ConversationList.tsx  CostDashboard.tsx  Dashboard.tsx  ExportDialog.tsx  ModelSelector.tsx  Settings.tsx  ThemeToggle.tsx
crates/ember-web/src/: error.rs  handlers.rs  lib.rs  routes.rs  state.rs
crates/ember-web/static/: index.html
crates/ember-web/static/assets/: index-8ZcxY3XL.css  index-B43z0tHn.js  index-CtzRP8Xe.js  index-DA4GH5IF.js  index-DcORjZpX.css  index-Dmc4gqnZ.css
docs/: book.toml  getting-started.md  index.html  why-ember.md
docs/community/: README.md  discord-setup.md  faq.md
docs/src/: README.md  SUMMARY.md
docs/src/getting-started/: configuration.md  first-chat.md  installation.md  quickstart.md
docs/src/guide/: agent-mode.md  cli.md  interactive.md  tui.md
docs/src/providers/: anthropic.md  deepseek.md  gemini.md  groq.md  index.md  mistral.md  ollama.md  openai.md  openrouter.md  xai.md
docs/src/tools/: browser.md  filesystem.md  overview.md  shell.md  web.md
examples/: agent_with_tools.rs  basic_chat.rs  checkpoints.rs  memory_and_rag.rs  multi_provider.rs  streaming_chat.rs
examples/plugins/github/: README.md  manifest.json
examples/plugins/slack/: README.md  manifest.json
examples/plugins/weather/: README.md  manifest.json
extensions/vscode-ember/: README.md  package-lock.json  package.json  tsconfig.json
extensions/vscode-ember/src/: ChatViewProvider.ts  EmberClient.ts  InlineCompletionProvider.ts  extension.ts
marketing/: press-kit.md
scripts/: build-desktop.sh  install.sh
tests/: integration.rs
tests/integration/: api_chat.rs  cli_basic.rs  cli_chat.rs  cli_config.rs  helpers.rs  mod.rs
