[package]
name = "ember-desktop"
version = "0.1.0"
edition = "2021"
description = "Ember AI Desktop Application"
license = "MIT OR Apache-2.0"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-autostart = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.11"

ember-core = { path = "../ember-core" }
ember-llm = { path = "../ember-llm" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]