[package]
name = "ember-i18n"
version = "0.1.0"
edition = "2021"
description = "Internationalization (i18n) support for Ember"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ember-ai/ember"
keywords = ["i18n", "localization", "internationalization", "translation"]
categories = ["internationalization", "localization"]

[dependencies]
# i18n
rust-i18n = "3"
sys-locale = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Utilities
once_cell = "1.19"
log = "0.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }